syntax = "proto3";

message V3MatchTuple {
    enum MatchRound {
        NONE = 0;
        PRACTICE = 1;
        QUAL = 2;
        QF = 3;
        SF = 4;
        F = 5;
        R16 = 6;
        R32 = 7;
        R64 = 8;
        R128 = 9;

        TOP_N = 15;
        ROUND_ROBIN = 16;

        SKILLS = 17;
        TIMEOUT = 18;
    }

    enum SkillsType {
        NO_SKILLS = 0;
        PROGRAMMING = 1;
        DRIVER = 2;
    }

    int32 division = 1;
    MatchRound round = 2;
    int32 instance = 3;
    int32 match = 4;
    int32 session = 5;
}
